--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -210,7 +210,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/StarterContent/Maps/Level1
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2712,4 +2712,30 @@ bConvertSceneUnit=False
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=False
 K2Node_VariableGet.Variable=False
+
+[/Script/UnrealEd.EditorExperimentalSettings]
+bEnableAsyncTextureCompilation=False
+bEnableAsyncSkeletalMeshCompilation=True
+bHDREditor=False
+HDREditorNITLevel=160.000000
+bProceduralFoliage=False
+bEnableTranslationPicker=False
+ConsoleForGamepadLabels=None
+bDrawMidpointArrowsInBlueprints=False
+bContextMenuChunkAssignments=False
+bSharedCookedBuilds=False
+bAllowLateJoinInPIE=False
+bAllowVulkanPreview=False
+bEnableMultithreadedLightmapEncoding=False
+bEnableMultithreadedShadowmapEncoding=False
+bUseOpenCLForConvexHullDecomp=False
+bAllowPotentiallyUnsafePropertyEditing=False
+bFacialAnimationImporter=False
+bMobilePIEPreviewDeviceLaunch=False
+bTextAssetFormatSupport=False
+bVirtualizedAssetRehydration=False
+bEnableLongPathsSupport=False
+bPackedLevelActor=True
+bLevelInstance=True
+bEnableWorldPartitionActorFilters=False
 
