--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Game/HP_GameObjects/Spells
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -212,8 +212,11 @@ LastLevel=/Game/StarterContent/Maps/Level1
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -239,6 +242,7 @@ OpenAssetsAtExit=/Game/HP_GameObjects/BP_Tortoise_Button.BP_Tortoise_Button
 OpenAssetsAtExit=/Game/HP_GameObjects/Doors/BP_Tortoise_Door.BP_Tortoise_Door
 OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/HP_GameObjects/Spells/BP_Alohomora.BP_Alohomora
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1009,6 +1013,20 @@ PlayerStart.Input=True
 PlayerStart.Actor=True
 InputMappingContext.Mappings=True
 InputMappingContext.Description=True
+BP_Alohomora_C.Tick=True
+BP_Alohomora_C.Replication=True
+BP_Alohomora_C.Rendering=True
+BP_Alohomora_C.Collision=True
+BP_Alohomora_C.Actor=True
+BP_Alohomora_C.Input=True
+BP_Alohomora_C.HLOD=True
+BP_Alohomora_C.Physics=True
+BP_Alohomora_C.WorldPartition=True
+BP_Alohomora_C.Events=True
+InputAction.Description=True
+InputAction.Action=True
+InputAction.Input Consumption=True
+InputAction.User Settings=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1164,8 +1182,8 @@ TcpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 TemplateSequenceEditorSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Spells.IA_Spells
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Spells.IA_Spells
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Spells.IA_Spells
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Spells.IA_Spells
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -1312,32 +1330,35 @@ SkinnedMeshComponent="\"Object\" "
 SphereComponent="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[16]\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[4].Modifiers\" \"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[14].Modifiers\" \"Object.Mappings.Mappings.Mappings[15].Triggers\" \"Object.Mappings.Mappings.Mappings[16]\" \"Object.Mappings.Mappings.Mappings[16].Triggers\" "
 DataAsset="\"Object\" "
 InputAction="\"Object\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/ThirdPerson/Input/IMC_Default
-MRUItem2=/Game/HP_GameObjects/Doors/BP_Tortoise_Door
-MRUItem3=/Game/HP_GameObjects/BP_Tortoise_Button
-MRUItem4=/Game/HP_GameObjects/BP_Flipendo_Button
-MRUItem5=/Game/HP_GameObjects/BP_Trap_Platform
-MRUItem6=/Game/HP_GameObjects/Doors/BP_FinalDoor
-MRUItem7=/Game/HP_GameObjects/Doors/BP_Alohomora_Door_2
-MRUItem8=/Game/HP_GameObjects/Doors/BP_Alohomora_Door_1
-MRUItem9=/Game/HP_GameObjects/Spells/BP_Flipendo
-MRUItem10=/Game/HP_GameObjects/BP_Flipendo_Box_2
-MRUItem11=/Game/HP_GameObjects/BP_Flipendo_Box_1
-MRUItem12=/Game/HP_GameObjects/BP_Tortoise
-MRUItem13=/Game/HP_GameObjects/Tortoise_Door_1
-MRUItem14=/Game/StarterContent/Architecture/Floor_400x400
-MRUItem15=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem16=/Engine/MapTemplates/SM_Template_Map_Floor
-MRUItem17=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem18=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem19=/Game/StarterContent/Maps/Minimal_Default
-MRUItem20=/Game/StarterContent/Maps/StarterMap
+MRUItem0=/Game/HP_GameObjects/Spells/BP_Alohomora
+MRUItem1=/Game/ThirdPerson/Input/Actions/IA_Move
+MRUItem2=/Game/ThirdPerson/Input/Actions/IA_Spells
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/ThirdPerson/Input/IMC_Default
+MRUItem5=/Game/HP_GameObjects/Doors/BP_Tortoise_Door
+MRUItem6=/Game/HP_GameObjects/BP_Tortoise_Button
+MRUItem7=/Game/HP_GameObjects/BP_Flipendo_Button
+MRUItem8=/Game/HP_GameObjects/BP_Trap_Platform
+MRUItem9=/Game/HP_GameObjects/Doors/BP_FinalDoor
+MRUItem10=/Game/HP_GameObjects/Doors/BP_Alohomora_Door_2
+MRUItem11=/Game/HP_GameObjects/Doors/BP_Alohomora_Door_1
+MRUItem12=/Game/HP_GameObjects/Spells/BP_Flipendo
+MRUItem13=/Game/HP_GameObjects/BP_Flipendo_Box_2
+MRUItem14=/Game/HP_GameObjects/BP_Flipendo_Box_1
+MRUItem15=/Game/HP_GameObjects/BP_Tortoise
+MRUItem16=/Game/HP_GameObjects/Tortoise_Door_1
+MRUItem17=/Game/StarterContent/Architecture/Floor_400x400
+MRUItem18=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem19=/Engine/MapTemplates/SM_Template_Map_Floor
+MRUItem20=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem21=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem22=/Game/StarterContent/Maps/Minimal_Default
+MRUItem23=/Game/StarterContent/Maps/StarterMap
 
 [MessageLog]
 LastLogListing=AssetCheck
@@ -2445,6 +2466,9 @@ bUseUnsortedMenus=False
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
 /Game/HP_GameObjects/BP_Flipendo_Button.BP_Flipendo_Button=1
 /Game/HP_GameObjects/BP_Trap_Platform.BP_Trap_Platform=1
+/Game/HP_GameObjects/Spells/BP_Alohomora.BP_Alohomora=1
+/Game/ThirdPerson/Input/Actions/IA_Spells.IA_Spells=1
+/Game/ThirdPerson/Input/Actions/IA_Move.IA_Move=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2802,6 +2826,7 @@ PropertyWrapper.Variable=False
 K2Node_VariableGet.Variable=False
 K2Node_CustomEvent.Graph=True
 BP_Trap_Platform_C.Actor=True
+InputAction.Action=True
 
 [/Script/UnrealEd.EditorExperimentalSettings]
 bEnableAsyncTextureCompilation=False
