--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/HP_GameObjects
+ContentBrowserDrawer.SelectedPaths=/Game/HP_GameObjects/Doors
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -216,7 +216,6 @@ DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -237,7 +236,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/HP_GameObjects/Spells/BP_Alohomora.BP_Alohomora
 OpenAssetsAtExit=/Game/HP_GameObjects/BP_Tortoise.BP_Tortoise
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -1042,6 +1040,16 @@ BP_Alohomora_Door_1_C.Networking=True
 BP_Alohomora_Door_2_C.Tick=True
 BP_Alohomora_Door_2_C.WorldPartition=True
 BP_Alohomora_Door_2_C.Events=True
+BP_ThirdPersonCharacter_C.Default=True
+BP_Alohomora_Door_C.TransformCommon=True
+BP_Alohomora_Door_C.Rendering=True
+BP_Alohomora_Door_C.Replication=True
+BP_Alohomora_Door_C.Collision=True
+BP_Alohomora_Door_C.HLOD=True
+BP_Alohomora_Door_C.Physics=True
+BP_Alohomora_Door_C.Networking=True
+BP_Alohomora_Door_C.Input=True
+BP_Alohomora_Door_C.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1355,29 +1363,28 @@ K2Node_Variable="\"Object\" "
 K2Node="\"Object\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/HP_GameObjects/BP_Tortoise
-MRUItem1=/Game/HP_GameObjects/Doors/BP_Alohomora_Door_1
-MRUItem2=/Game/HP_GameObjects/Spells/BP_Alohomora
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/ThirdPerson/Input/Actions/IA_Move
-MRUItem5=/Game/ThirdPerson/Input/Actions/IA_Spells
-MRUItem6=/Game/ThirdPerson/Input/IMC_Default
-MRUItem7=/Game/HP_GameObjects/Doors/BP_Tortoise_Door
-MRUItem8=/Game/HP_GameObjects/BP_Tortoise_Button
-MRUItem9=/Game/HP_GameObjects/BP_Flipendo_Button
-MRUItem10=/Game/HP_GameObjects/BP_Trap_Platform
-MRUItem11=/Game/HP_GameObjects/Doors/BP_FinalDoor
-MRUItem12=/Game/HP_GameObjects/Spells/BP_Flipendo
-MRUItem13=/Game/HP_GameObjects/BP_Flipendo_Box_2
-MRUItem14=/Game/HP_GameObjects/BP_Flipendo_Box_1
-MRUItem15=/Game/HP_GameObjects/Tortoise_Door_1
-MRUItem16=/Game/StarterContent/Architecture/Floor_400x400
-MRUItem17=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem18=/Engine/MapTemplates/SM_Template_Map_Floor
-MRUItem19=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem20=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem21=/Game/StarterContent/Maps/Minimal_Default
-MRUItem22=/Game/StarterContent/Maps/StarterMap
+MRUItem0=/Game/HP_GameObjects/Doors/BP_Alohomora_Door
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/HP_GameObjects/BP_Tortoise
+MRUItem3=/Game/ThirdPerson/Input/Actions/IA_Move
+MRUItem4=/Game/ThirdPerson/Input/Actions/IA_Spells
+MRUItem5=/Game/ThirdPerson/Input/IMC_Default
+MRUItem6=/Game/HP_GameObjects/Doors/BP_Tortoise_Door
+MRUItem7=/Game/HP_GameObjects/BP_Tortoise_Button
+MRUItem8=/Game/HP_GameObjects/BP_Flipendo_Button
+MRUItem9=/Game/HP_GameObjects/BP_Trap_Platform
+MRUItem10=/Game/HP_GameObjects/Doors/BP_FinalDoor
+MRUItem11=/Game/HP_GameObjects/Spells/BP_Flipendo
+MRUItem12=/Game/HP_GameObjects/BP_Flipendo_Box_2
+MRUItem13=/Game/HP_GameObjects/BP_Flipendo_Box_1
+MRUItem14=/Game/HP_GameObjects/Tortoise_Door_1
+MRUItem15=/Game/StarterContent/Architecture/Floor_400x400
+MRUItem16=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem17=/Engine/MapTemplates/SM_Template_Map_Floor
+MRUItem18=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem19=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem20=/Game/StarterContent/Maps/Minimal_Default
+MRUItem21=/Game/StarterContent/Maps/StarterMap
 
 [MessageLog]
 LastLogListing=AssetCheck
